@@ -963,6 +963,17 @@ PLAYERS will allow players to be affected.  An optional zapper mask may follow a
 to add additional masks. \
 <ZAP=disallow>
 
+PROP_LIMITEDCONTENTS=\
+Property   : Prop_LimitedContents\n\r\
+Targets    : Items, Rooms, Areas\n\r\
+Parameters : [MAX NUM] ([MASK]) (; [...] / MSG="[MESSAGE]" ACTUAL=[T/F])\n\r\
+Example    : 3 -javaclass +genweapon\n\r\
+Example    : 3;msg="Can't do it!"\n\r\
+Description: \n\r\
+This property will ensure that no more than the given number of items \
+that match the given mask may be either put into the container, or dropped \
+in a room.  Multiple masks may be specified.  
+
 PROP_LIMITEDEQUIP=\
 Property   : Prop_LimitedEquip\n\r\
 Targets    : Items\n\r\
